// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SyntaxHighlighter renders jsx highlighted text 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-jsx"
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    import React from "react";
import uniquePropHOC from "./lib/unique-prop-hoc";

class Expire extends React.Component {
    constructor(props) {
        super(props);
        this.state = { component: props.children }
    }
    componentDidMount() {
        setTimeout(() =&gt; {
            this.setState({
                component: null
            });
        }, this.props.time || this.props.seconds * 1000);
    }
    render() {
        return this.state.component;
    }
}
  </code>
</pre>
`;

exports[`SyntaxHighlighter should just render text if syntax is not registered 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-python"
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      print
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      'hello'
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
  </code>
</pre>
`;

exports[`When the code split is loaded - SyntaxHighlighter renders jsx highlighted text 1`] = `
<pre
  style={
    Object {
      "MozHyphens": "none",
      "MozTabSize": "4",
      "OTabSize": "4",
      "WebkitHyphens": "none",
      "background": "#f5f2f0",
      "color": "black",
      "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
      "fontSize": "1em",
      "hyphens": "none",
      "lineHeight": "1.5",
      "margin": ".5em 0",
      "msHyphens": "none",
      "overflow": "auto",
      "padding": "1em",
      "tabSize": "4",
      "textAlign": "left",
      "textShadow": "0 1px white",
      "whiteSpace": "pre",
      "wordBreak": "normal",
      "wordSpacing": "normal",
      "wordWrap": "normal",
    }
  }
>
  <code
    className="language-jsx"
    style={
      Object {
        "MozHyphens": "none",
        "MozTabSize": "4",
        "OTabSize": "4",
        "WebkitHyphens": "none",
        "background": "none",
        "color": "black",
        "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
        "fontSize": "1em",
        "hyphens": "none",
        "lineHeight": "1.5",
        "msHyphens": "none",
        "tabSize": "4",
        "textAlign": "left",
        "textShadow": "0 1px white",
        "whiteSpace": "pre",
        "wordBreak": "normal",
        "wordSpacing": "normal",
        "wordWrap": "normal",
      }
    }
  >
    <span
      className="module"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      import
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      React
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      className="module"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      from
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "react"
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
        
    </span>
    <span
      className="module"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      import
    </span>
    <span
      style={Object {}}
    >
       uniquePropHOC 
    </span>
    <span
      className="module"
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      from
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      "./lib/unique-prop-hoc"
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    

    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      class
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      Expire
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      extends
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      React
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      Component
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
            
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      constructor
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      className="parameter"
      style={Object {}}
    >
      props
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      super
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={Object {}}
    >
      props
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      state
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
       component
    </span>
    <span
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      :
    </span>
    <span
      style={Object {}}
    >
       props
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      children
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
            
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
            
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      componentDidMount
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      setTimeout
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      className="arrow"
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      =&gt;
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                    
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      className="method"
      style={
        Object {
          "color": "#690",
        }
      }
    >
      setState
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                        component
    </span>
    <span
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      :
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#555",
        }
      }
    >
      null
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                    
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ,
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      props
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      time
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      ||
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      props
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      seconds
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "background": "hsla(0, 0%, 100%, .5)",
          "color": "#9a6e3a",
        }
      }
    >
      *
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#905",
        }
      }
    >
      1000
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
            
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
            
    </span>
    <span
      style={
        Object {
          "color": "#DD4A68",
        }
      }
    >
      render
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      (
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      )
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      {
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
                
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      return
    </span>
    <span
      style={Object {}}
    >
       
    </span>
    <span
      style={
        Object {
          "color": "#07a",
        }
      }
    >
      this
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      state
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      .
    </span>
    <span
      style={
        Object {
          "color": "#690",
        }
      }
    >
      component
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      ;
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
            
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
    <span
      style={Object {}}
    >
      

    </span>
    <span
      style={Object {}}
    >
        
    </span>
    <span
      style={
        Object {
          "color": "#999",
        }
      }
    >
      }
    </span>
  </code>
</pre>
`;
